site: fix li element overflow (#124)

--- a/sites/pc/entry/layout/index.less
+++ b/sites/pc/entry/layout/index.less
@@ -90,7 +90,6 @@ body {
             padding-left: 20px;
             li {
                 font-weight: 400;
-                height: 22px;
                 line-height: 22px;
                 color: #424E66;
                 line-height: 2;
